<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/congratsTextView"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/congratulations"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/scoreHeaderTextView"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:gravity="bottom|center"
        android:text="@string/score_header"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/score"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/newQuizButton"
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:background="@drawable/button_border_color"
        android:onClick="startNewQuiz"
        android:text="@string/new_quiz"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/finishButton"
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_border_color"
        android:onClick="quitGame"
        android:text="@string/finish"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold" />
</LinearLayout>