<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/headerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:gravity="center|center_vertical"
        android:padding="4dp"
        android:text="@string/header"
        android:textColor="#4E4E4E"
        android:textSize="20sp"
        android:textStyle="bold"
        android:scrollbars = "vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/progressTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|center_vertical"
            android:text="@string/progress"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="343dp"
            android:layout_height="26dp"
            android:layout_marginRight="8dp"
            android:max="10"
            android:progress="0"
            android:progressDrawable="@drawable/custom_progressbar_horizontal" />

    </LinearLayout>

    <TextView
        android:id="@+id/questionTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="93dp"
        android:gravity="bottom|start"
        android:padding="16dp"
        android:text="@string/question_title"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/questionDetailTextView"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/answerButton1"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_answer_white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/answerButton2"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_answer_white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/answerButton3"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_answer_white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:background="@drawable/button_answer_white"
        android:onClick="onNextButtonClicked"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>